--- a/src/components/TextSphere/TextSphere.css
+++ b/src/components/TextSphere/TextSphere.css
@@ -1,6 +1,6 @@
 .text-shpere {
     position: relative;
-    top: 0;
+    top: 20;
     width: 100%;
     /* height: 100vh; */
     height: 100%;
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     /* background: #1e1e1e; */
+    /* border: 1px solid blue; */
 }
 
 .tagcloud {
@@ -17,18 +18,24 @@
     font-weight: 600;
     letter-spacing: 0.0625em;
     font-size: 12px;
+    margin-top: -20px;
+    margin-bottom: -20px;
 }
 
 /* Change color of each text in sphere on hover   */
 .tagcloud--item {
     /* color: #00ffffff; */
-    color: black;
+    /* color: #1C1A1C; */
+    /* color: #4169e1; */
+    color: #1C1A1C;
     /* text-transform: uppercase; */
 }
 
 .tagcloud--item:hover {
     /* color: #ff6347; */
-    color: royalblue;
+    /* color: royalblue; */
+    /* color: #4169e1; */
+    color: #ff5349;
     /* cursor: pointer; */
     cursor: default;
 }
